--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tech-friends",
+  "name": "encyclone",
   "version": "1.0.0",
-  "description": "",
+  "description": "An app that feeds users articles from The Encyclopedia Brittanica based on algorithmic user profiles.",
   "main": "server/server.js",
   "scripts": {
     "start": "node server --ignore client",
