--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "google-auth-library": "^8.7.0",
+    "react-google-login": "^5.2.2"
   }
 }
