--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "create-react-app": "^5.0.1",
     "dotenv": "^16.0.3",
+    "fast-xml-parser": "^4.1.2",
     "node-fetch": "^3.3.0"
   }
 }
