--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon",
-    "seed": "node seeds/index.js"
+    "seed": "node seeds/index.js",
     "dev": "npx nodemon server.js",
     "seed": "node seeds"
   },
