--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "fast-xml-parser": "^4.1.2",
     "graphql": "^15.4.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^17.0.1",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^17.0.1",
