--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
-    "start": "serve -s build",
+    "start": "node server/server.js",
     "start:prod": "node server/server.js",
     "start:dev": "concurrently \"cd server && npx nodemon server\" \"cd client && npm start\"",
     "seed": "cd server && npm run seed",
